# pyDISORT

./: .gitignore  README.md  README.rst  meson.build  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml
tests/: test_atmosphereless_retrieval.py
