[metadata]
name = pyDISORT
version = 0.0.1
author = kconnour
home_page = https://github.com/kconnour/pyDISORT
description = Make DISORT more accessible to the yearning masses

[options]
packages = find:
include_package_data = True
python_requires = >= 3.9
install_requires =
   numpy

[options.extras_require]
test =
   numpy
   pytest
docs =
   Sphinx
   pydata-sphinx-theme

[options.package_data]
* = ../*.so

