[metadata]
name = pyDISORT
version = 0.0.1
author = kconnour
description = Make DISORT more accessible to the yearning masses
long_description = README.md
project_urls =
   Source Code = https://github.com/kconnour/pyDISORT
classifiers =
   Intended Audience :: Science/Research
   License :: OSI Approved :: BSD License
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.9
   Operating System :: POSIX :: Linux
   Operating System :: MacOS :: MacOS X
   Topic :: Scientific/Engineering

[options]
packages = find:
include_package_data = True
python_requires = >= 3.9
install_requires =
   numpy

[options.extras_require]
test =
   numpy
   pytest
docs =
   Sphinx
   pydata-sphinx-theme

[options.package_data]
* = ../*.so

